2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Take root privilege to call get_fs_usage.

2014-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Run /usr/bin/lsb_release if
	  it exist.

2014-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amcleanup.8.xml: Add amvault.
	* server-src/amcleanup.pl: Add amvault.

2014-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Fix for curl and gnutls.

2014-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Retry on MTX 'No Sense'.

2014-01-09  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c, amar-src/amar.h, perl/Amanda/Archive.pod,
	  perl/Amanda/Archive.swg: Add amar_size and
	  amar_attr_add_data_fd_in_thread
	* installcheck/Amanda_Archive.pl: Test amar_size.

2014-01-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Do not vault dle not in the disklist.

2014-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/group-member.c, gnulib/xalloc-oversized.h,
	  gnulib/euidaccess.c, gnulib/getgroups.c, gnulib/root-uid.h,
	  config/gnulib/getgroups.m4, config/gnulib/group-member.m4,
	  config/gnulib/euidaccess.m4: Missing file gnulib euidaccess.

2014-01-03  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Check gnutar_listdir before uid to 0.
	* client-src/client_util.c: Use EUIDACCESS.
	* common-src/amanda.h: Define EUIDACCESS.
	* configure.in: Check for euidaccess and eaccess.
	* config/gnulib/euidaccess.m4, config/gnulib/getgroups.m4,
	  config/gnulib/gnulib-cache.m4, config/gnulib/gnulib-comp.m4,
	  config/gnulib/group-member.m4, gnulib/Makefile.am,
	  gnulib/euidaccess.c, gnulib/getgroups.c, gnulib/group-member.c,
	  gnulib/regenerate/regenerate, gnulib/root-uid.h,
	  gnulib/xalloc-oversized.h: Add euidaccess module.

2014-01-02  Jean-Louis Martineau <martineau@zmanda.com>